Bug 123346 - [CSS Regions][CSS Shapes] Layout error when the shape has negative top coordinate and it's applied on the second region
Summary: [CSS Regions][CSS Shapes] Layout error when the shape has negative top coordi...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Zoltan Horvath
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-25 09:36 PDT by Zoltan Horvath
Modified: 2013-10-29 13:43 PDT (History)
5 users (show)

See Also:


Attachments
Patch (7.51 KB, patch)
2013-10-25 11:04 PDT, Zoltan Horvath
hyatt: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Zoltan Horvath 2013-10-25 09:36:28 PDT
We have a layout error when there is a shape applied on the second region,and it has a negative 'top' coordinate. Since shapeInsideInfo::shapeLogicalTop() can return negative numbers, we need to check for it we're positioning the first line in the region.
Comment 1 Zoltan Horvath 2013-10-25 11:04:30 PDT
Created attachment 215192 [details]
Patch
Comment 2 Dave Hyatt 2013-10-29 13:28:12 PDT
Comment on attachment 215192 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=215192&action=review

r=me

> Source/WebCore/rendering/RenderBlockLineLayout.cpp:1447
> +        if (!shapeTopOffset && (0 < shapeInsideInfo->shapeLogicalTop()))

We don't typically put the constants on the left. I'd change this to shapeInsideInfo->shapeLogicalTop() > 0
Comment 3 Zoltan Horvath 2013-10-29 13:43:55 PDT
http://trac.webkit.org/changeset/158219